--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -95,16 +95,6 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     />
-               <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_above="@id/urlBox"
-                android:layout_marginBottom="20dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:id="@+id/recycler_view_home">
-
-        </android.support.v7.widget.RecyclerView>
                 <android.support.v7.widget.CardView
                     android:id="@+id/urlBox"
                     android:layout_width="match_parent"
@@ -166,6 +156,7 @@
                     app:mrl_rippleRoundedCorners="10dp"
                     android:layout_marginTop="30dp">
                         <ImageView
+                            android:id="@+id/download_button"
                             android:layout_width="80dp"
                             android:layout_height="80dp"
                             android:padding="10dp"
