--- a/app/src/main/res/layout/custom_layout.xml
+++ b/app/src/main/res/layout/custom_layout.xml
@@ -44,6 +44,7 @@
         android:hint="Enter Directory to store"
         android:drawableLeft="@drawable/file_icon"
         android:drawableTint="#3F51B5"
+        android:layout_marginBottom="10dp"
         android:layout_marginTop="215dp"
         android:inputType="text" />
     </android.support.design.widget.TextInputLayout>
@@ -52,6 +53,7 @@
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:layout_below="@+id/edit2"
         android:layout_gravity="center"
         android:layout_centerHorizontal="true"
@@ -70,7 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="10dp"
-
+        android:visibility="gone"
         android:layout_marginRight="10dp"
         android:layout_below="@+id/edit2"
         android:layout_centerHorizontal="true"
