Final commit for v1.0.0

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@android:color/white"
     android:layout_height="match_parent"
-    tools:context="com.example.balakrishnan.mybrowser.AboutActivity">
+    tools:context="com.apps.balakrishnan.mybrowser.AboutActivity">
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
