--- a/app/src/main/res/layout/custom_layout.xml
+++ b/app/src/main/res/layout/custom_layout.xml
@@ -46,7 +46,8 @@
         android:drawableTint="#3F51B5"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="215dp"
-        android:inputType="text" />
+        android:inputType="text"
+        android:text="/Download/"/>
     </android.support.design.widget.TextInputLayout>
 
     <Switch
