--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -260,7 +260,7 @@
                                 android:layout_marginLeft="10dp"
                                 android:layout_weight="1"
                                 android:textSize="16sp"
-                                android:text="2018 MyBrowser"
+                                android:text="2018 Infinity Downloader"
                                 android:layout_marginBottom="10dp"
                                 android:layout_marginRight="80dp"
                                 android:layout_marginTop="10dp"/>
@@ -290,7 +290,7 @@
                             android:layout_marginLeft="20dp"
                             android:layout_marginRight="20dp"
                             android:background="@color/transparent_black_hex_1"/>
-                        <com.balysv.materialripple.MaterialRippleLayout
+                        <!--<com.balysv.materialripple.MaterialRippleLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp">
@@ -331,7 +331,7 @@
                                     android:text="https://github.com/wasabeef/recyclerview-animators"
                                     android:textSize="13sp"/>
                             </LinearLayout>
-                        </com.balysv.materialripple.MaterialRippleLayout>
+                        </com.balysv.materialripple.MaterialRippleLayout>-->
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
@@ -546,7 +546,7 @@
                             android:layout_marginRight="20dp"
                             android:background="@color/transparent_black_hex_1"/>
 
-                        <com.balysv.materialripple.MaterialRippleLayout
+                        <!--<com.balysv.materialripple.MaterialRippleLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp">
@@ -589,7 +589,7 @@
                             </LinearLayout>
                         </com.balysv.materialripple.MaterialRippleLayout>
 
-
+                        -->
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
 
