--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,7 +21,7 @@
             app:waveAmplitude="10.25"
             android:layout_alignParentBottom="true"
             app:waveBackgroundColor="@android:color/transparent"
-            app:waveColor="@color/colorAccent"
+            app:waveColor="#000"
             app:waveDensity="5.0"
             app:waveFrequency="2.0"
             app:waveNumberOfWaves="5"
@@ -164,14 +164,28 @@
                                     android:layout_height="80dp"
                                     android:padding="20dp"
                                     android:src="@drawable/download"
-                                    android:tint="@android:color/white"/>
+                                    android:tint="@android:color/white"
+                                    />
 
                         <com.apps.balakrishnan.mybrowser.CircleProgressBar
                             android:layout_width="80dp"
                             android:layout_height="80dp"
                             app:Thickness="5dp"
                             android:id="@+id/progress_bar"
-                            app:Color="@color/red"/>
+                            app:Color="@color/red"
+                            />
+                        <TextView
+                            android:id="@+id/progressPercent"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:text="0%"
+                            android:textSize="25sp"
+                            android:textColor="#fff"
+                            android:textAlignment="center"
+                            android:paddingTop="22dp"
+                            android:visibility="invisible"
+
+                            />
                 </RelativeLayout>
         </RelativeLayout>
 
